[package]
name = "lpc55-bootrom-sys"
version = "0.1.0"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = "0.2.1"

[build-dependencies]
bindgen = { version = "0.53.1", default-features = false }
cc = "1.0.25"
